# Tuna_Pedal

./: Capstone_Project_Cost.xlsx  Digital_Multi_Effect_Guitar_Pedal_Spec.docx
Firmware/Document/: FSMC_SSD1963.docx
Firmware/Ref/F412_FSMC_LCD/: .cproject  .mxproject  F412_FSMC_LCD Debug.launch
Firmware/Ref/HDMI_F4/: .cproject  .mxproject  .project  HDMI_F4 Debug.launch  HDMI_F4.ioc  STM32F407VGTX_FLASH.ld
Firmware/Ref/HDMI_F4/Drivers/UI/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
Firmware/Ref/HDMI_F4/Drivers/UI/components/: ui_comp.h  ui_comp_container1.c  ui_comp_container1.h  ui_comp_hook.c  ui_comp_hook.h
Firmware/Ref/HDMI_F4/Drivers/UI/fonts/: ui_font_Font1.c  ui_font_Font30.c  ui_font_Font50.c  ui_font_Light.c  ui_font_Light40.c
Firmware/Ref/HDMI_F4/Drivers/UI/images/: ui_img_back1_png.c  ui_img_back_png.c  ui_img_back_run_png.c  ui_img_backed_png.c  ui_img_infor_png.c  ui_img_infored_png.c  ui_img_left_png.c  ui_img_pause_png.c  ui_img_play_png.c  ui_img_power_png.c  ui_img_powered_png.c  ui_img_seting_png.c  ui_img_setinged_png.c
Firmware/Ref/HDMI_F4/Drivers/UI/screens/: ui_Main.c  ui_Run.c  ui_Setting.c
Firmware/Ref/SSD1963/: ssd1963.c  ssd1963.h
Firmware/UI/: ui.c  ui.h
Firmware/UI/screens/: ui_Screen1.c
Hardware/ver1/Digital_Multi_Pedal_v1/: Buffer.kicad_sch  Codec.kicad_sch  DSP.kicad_sch  Digital_Multi_Pedal_v1.kicad_pcb  Digital_Multi_Pedal_v1.kicad_prl  Digital_Multi_Pedal_v1.kicad_pro  Digital_Multi_Pedal_v1.kicad_sch  Diode.kicad_sym  Display.kicad_sch  Input_Output.kicad_sch  MCU.kicad_sch  Power.kicad_sch  (+3 more)
(+832 files in other folders)
